fix: remove illegal character

--- a/app/posts/remix-vite-vs-remix-classic.mdx
+++ b/app/posts/remix-vite-vs-remix-classic.mdx
@@ -92,7 +92,7 @@ The development server startup time is dramatically different:
 **Remix Vite:**
 
 - Initial startup: 2-3 seconds
-- Subsequent startup: <1 second
+- Subsequent startup: less than 1 second
 
 ## Performance Optimizations
 
